# hydradb-cli

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  publish.yml
scripts/: bootstrap.sh
src/hydradb_cli/: __init__.py  client.py  config.py  main.py  output.py
src/hydradb_cli/commands/: auth.py  config_cmd.py  fetch.py  knowledge.py  memories.py  recall.py  tenant.py
src/hydradb_cli/utils/: common.py
tests/: test_cli_commands.py  test_client.py  test_config.py  test_output.py
