[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hydradb-cli"
version = "0.1.0"
authors = [
    { name = "HydraDB", email = "founders@hydradb.com" },
]
description = "Agent-friendly CLI for HydraDB — memory, recall, and ingestion from the terminal"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
keywords = ["hydradb", "cli", "ai", "memory", "recall", "agent"]

classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Environment :: Console",
    "Typing :: Typed",
]

dependencies = [
    "typer>=0.9,<1",
    "httpx>=0.24",
    "rich>=13.0",
]

[project.scripts]
hydradb = "hydradb_cli.main:app"

[project.urls]
Homepage = "https://hydradb.com/"
Documentation = "https://docs.hydradb.com/"
Repository = "https://github.com/usecortex/hydradb-cli"

[project.optional-dependencies]
dev = [
    "ruff>=0.4",
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "S",    # flake8-bandit (security)
    "T20",  # flake8-print
    "SIM",  # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "S101",   # assert usage (acceptable in tests and CLI)
    "T201",   # print statements (CLI tool uses print)
    "B008",   # function call in default argument (standard Typer pattern)
]

[tool.ruff.lint.isort]
known-first-party = ["hydradb_cli"]
